fix spacing

--- a/user/pages/components/AboutMe.module.css
+++ b/user/pages/components/AboutMe.module.css
@@ -8,8 +8,8 @@
     background-color: white;
     width: 80%;
     margin: 0 auto;
-    text-align: center;
-    padding: 40px 30px 30px 30px;
+    text-align: justify;
+    padding: 40px 40px 30px 40px;
     border: 1px solid rgba(0,0,0,0.05);
 }
 
